tests/sksl/errors/OpenArray.sksl
void main(inout float4 color) {
    color.r[ = ( color.g );
}
